# testcodes

./: .gitignore  README.md
acc-ddot/: ddot.f90
acc-omp-test/: acc-omp-test.F90
c-mpi-gpu-detect/: Makefile  backend_cuda.c  common.h  common_mpi.c  main.c
c-mpi-hello/: mpi_hello.c
c-ompto-ddot/: Makefile  ddot.c
c-opencl-dadd/: kernel.cl  main.c
compiler-ifdefs/: compiler_ifdefs.F90
cpp-cu-ddot/: Makefile  ddot.cuda.cpp  globals.hpp  kernel.cuh
cpp-hip-dadd/: Makefile  dadd.hip.cpp
cpp-hip-device-info/: gpu_table.txt  helpers.hip.hpp  main.cpp
cpp-kokkos-ddot/: CMakeLists.txt  ddot.kokkos.cpp
cpp-kokkos-ddot/cmake/: FindKokkos.cmake
cpp-quadrature/: quad_simpson.cpp  quad_trapezoid.cpp
cpp-sycl-ddot/: Makefile  ddot.sycl.cpp
cuda-magma/: testing_zgemm_batched.cpp  wigner_d_matrix_acc.cpp  wigner_d_matrix_acc.hpp
cuf-dadd/: Makefile
cuf-ddot/: mod_prec.f90
f90-acc-ddot/: ddot.f90
f90-acc-omp-test/: acc-omp-test.F90
f90-compiler-ifdefs/: compiler_ifdefs.F90
f90-cuf-ddot/: kernels.cuf  main.f90
f90-do-concurrent/: Makefile  stdpar.f90
f90-hdf5-test/: main.f90  mod_hdf5.f90
f90-linkage/: Makefile  main.f90  my_c_fn.c  my_explicit_iface_fn.f90  my_external_f77_sub.f  my_module.f90
f90-loop/: loop.f90
f90-magma-cublas-batched-zgemm/: Makefile  magma_util.cpp
f90-magma-cublas-zgemm/: Makefile  clock_gettime.c  mod_magma_iface.F90  zgemmtest.F90
f90-mpi-acc-magma-zgemv/: main.f90  mod_magma.f90
f90-mpi-hello/: mpi_hello.f90
f90-omp-hello/: omp_hello.F90
f90-ompto-ddot/: ddot.f90
f90-oop/: Makefile  body_construct_s.f90  (+4 more)
(+30 files in other folders)
